[gd_scene load_steps=24 format=3 uid="uid://chedjufa1qntw"]

[ext_resource type="Texture2D" uid="uid://bf5325xeao4fa" path="res://Art/Tech/Load game menu/lg button.png" id="1_lbcbp"]
[ext_resource type="Script" path="res://Scripts/Main menu/Start Menu/Load Game Menu/SavesScript.gd" id="2_j5u48"]
[ext_resource type="Texture2D" uid="uid://bt0s6lykn0bu8" path="res://Art/Character/body/body.png" id="2_rxttx"]
[ext_resource type="Texture2D" uid="uid://gymh3gybyi7n" path="res://Art/Character/clothes/bottomall.png" id="4_7085b"]
[ext_resource type="Texture2D" uid="uid://cqobb38o16ffy" path="res://Art/Character/clothes/topall.png" id="6_oom04"]
[ext_resource type="Texture2D" uid="uid://drtyre1m2n6ib" path="res://Art/Character/clothes/bootsall.png" id="8_m73k5"]
[ext_resource type="Shader" path="res://Shaders/hair.gdshader" id="10_vksfj"]
[ext_resource type="Texture2D" uid="uid://pvle4qtu7xa8" path="res://Art/Character/hair/hairall.png" id="11_7vgew"]
[ext_resource type="Shader" path="res://Shaders/eyes.gdshader" id="13_kmx4u"]
[ext_resource type="Texture2D" uid="uid://b14w73mpyf3u6" path="res://Art/Character/eyes/eyesall.png" id="14_876d0"]
[ext_resource type="Theme" uid="uid://b78i1nbh81d5p" path="res://Theme.tres" id="16_8vrow"]
[ext_resource type="Texture2D" uid="uid://d0x1u68lyi8ya" path="res://Art/Tech/GUI/GUI.png" id="21_0ob0j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y11qj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l3t4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xi411"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mtgnf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ky16a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gcrkx"]
shader = ExtResource("10_vksfj")
shader_parameter/new_color1 = Color(0.349, 0.196, 0.141, 1)
shader_parameter/new_color2 = Color(1, 0.49, 0.983, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qkcxb"]
shader = ExtResource("13_kmx4u")
shader_parameter/new_color = Color(0.369, 0.357, 0.357, 1)

[sub_resource type="Animation" id="Animation_3b5kt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LgButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(119, 26)]
}

[sub_resource type="Animation" id="Animation_lgmlo"]
resource_name = "idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LgButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(119, 26)]
}

[sub_resource type="Animation" id="Animation_jw63x"]
resource_name = "pressed"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LgButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(119, 27), Vector2(119, 26)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d25s4"]
_data = {
"RESET": SubResource("Animation_3b5kt"),
"idle": SubResource("Animation_lgmlo"),
"pressed": SubResource("Animation_jw63x")
}

[node name="Saves" type="Button"]
custom_minimum_size = Vector2(238, 51)
anchors_preset = -1
anchor_right = 0.992
anchor_bottom = 0.378
offset_right = -0.0800171
offset_bottom = -0.0300026
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("16_8vrow")
theme_override_styles/normal = SubResource("StyleBoxEmpty_y11qj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_l3t4p")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xi411")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mtgnf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky16a")
flat = true
script = ExtResource("2_j5u48")

[node name="LgButton" type="Sprite2D" parent="."]
position = Vector2(119, 26)
texture = ExtResource("1_lbcbp")
hframes = 2

[node name="Character" type="Node2D" parent="LgButton"]
position = Vector2(-242, -128)

[node name="Body" type="Sprite2D" parent="LgButton/Character"]
position = Vector2(133.5, 112)
texture = ExtResource("2_rxttx")
centered = false
hframes = 4
vframes = 9
region_enabled = true
region_rect = Rect2(0, 0, 128, 288)

[node name="Bottom" type="Sprite2D" parent="LgButton/Character"]
position = Vector2(133.5, 110)
texture = ExtResource("4_7085b")
centered = false
hframes = 4
vframes = 5
region_enabled = true
region_rect = Rect2(0, 0, 128, 160)

[node name="Top" type="Sprite2D" parent="LgButton/Character"]
position = Vector2(149.5, 126)
texture = ExtResource("6_oom04")
hframes = 4
vframes = 7
region_enabled = true
region_rect = Rect2(0, 0, 128, 224)

[node name="Boots" type="Sprite2D" parent="LgButton/Character"]
position = Vector2(133.5, 110)
texture = ExtResource("8_m73k5")
centered = false
hframes = 4
vframes = 3
region_enabled = true
region_rect = Rect2(0, 0, 128, 96)

[node name="Hair" type="Sprite2D" parent="LgButton/Character"]
material = SubResource("ShaderMaterial_gcrkx")
position = Vector2(149.5, 126)
texture = ExtResource("11_7vgew")
hframes = 4
vframes = 80
region_enabled = true
region_rect = Rect2(0, 0, 128, 2560)

[node name="Eyes" type="Sprite2D" parent="LgButton/Character"]
material = SubResource("ShaderMaterial_qkcxb")
position = Vector2(149.5, 126)
texture = ExtResource("14_876d0")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 128, 32)

[node name="Name" type="Label" parent="LgButton/Character"]
offset_left = 192.0
offset_top = 109.0
offset_right = 255.0
offset_bottom = 117.0
theme = ExtResource("16_8vrow")
text = "kaldunpiskagriz"
metadata/_edit_use_anchors_ = true

[node name="TotalWealth" type="Label" parent="LgButton/Character"]
offset_left = 209.0
offset_top = 118.0
offset_right = 245.0
offset_bottom = 126.0
theme = ExtResource("16_8vrow")
text = "500"
metadata/_edit_use_anchors_ = true

[node name="Date" type="Label" parent="LgButton/Character"]
offset_left = 190.0
offset_top = 127.0
offset_right = 198.0
offset_bottom = 135.0
theme = ExtResource("16_8vrow")
text = "19"
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DaysSpent" type="Label" parent="LgButton/Character"]
offset_left = 218.0
offset_top = 136.0
offset_right = 226.0
offset_bottom = 144.0
theme = ExtResource("16_8vrow")
text = "1"
metadata/_edit_use_anchors_ = true

[node name="Money" type="Sprite2D" parent="LgButton/Character"]
position = Vector2(200, 119)
texture = ExtResource("21_0ob0j")
centered = false
region_enabled = true
region_rect = Rect2(502, 23, 7, 7)

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d25s4")
}

[connection signal="pressed" from="." to="." method="_on_pressed"]
